@@ -621,10 +621,18 @@ public class Graphics_Manager {
     public static int Translate(Context context, String name) {
         //Set to lower case here to simplify other calls
         name = name.toLowerCase();
+        //handle the fact that 'true/false' are reserved word and cant not been translate
+        if (name == "false") {
+            name = "False";
+        } else if (name == "true") {
+            name = "True";
+        }
+
         //To avoid space or - in name in strings.xml
         name = name.replace(" ", "_");
         name = name.replace("-", "_");
         name = name.replace(":", "_");
+        name = name.replace("/", "_");
         name = name.replace("(", "");
         name = name.replace(")", "");
         //To get a drawable R.Drawable
