@@ -38,7 +38,8 @@
     <string name="help_Text6">Follow-us on twitter :\nhttps://twitter.com/domogik</string>
     <string name="help_Text7">https://twitter.com/newdomodroid</string>
 
-    <string name="splash_title">Welcome to Domodroid 1.3 !</string>
+    <string name="splash_title_old">Welcome to Domodroid 1.3 !</string>
+    <string name="splash_title">Welcome to Domodroid 1.4 !</string>
     <string name="home_splash">This new version of Domodroid contains lot of new features and improvements that have not been tested on all kind of Android devices. If anything goes wrong, you can contact dev at the following address: http://wiki.domogik.org/Contact+and+support .</string>
     <string name="home_splash2">Please delete the Domodroid cache data from the \"Application Settings\" panel before using this new version.</string>
 
@@ -211,7 +212,9 @@
     <string name="OPTION_your_name">Your name</string>
     <string name="OPTION_your_name_desc">Set your name</string>
     <string name="OPTION_butler_explain">This screen allow butler configuration</string>
+    <string name="OPTION_server_qrcode">Auto config server with qrcode</string>
 
+    <string name="toast_crash">Domodroid crash</string>
     <string name="usage_settings">Widget configuration</string>
     <string name="usage_bt_apply">Apply changes</string>
     <string name="usage_bt_cancel">Cancel</string>
@@ -702,7 +705,7 @@
     <string name="Room_longclic_menu_title">What do you want to do with this room?</string>
     <string name="mq_domogik_conf_localhost">MQ in domogik.cfg is listening only on localhost. It will not work correctly with Domodroid</string>
     <string name="error_sending_command">ERROR sending command</string>
-    <string name="problm_with_mq_information">Problem with MQ information</string>
+    <string name="problem_with_mq_information">Problem with MQ information</string>
     <string name="check_server_part_in_option">Check server part in Option</string>
     <string name="problem_geting_device_information">Problem geting device information</string>
     <string name="problem_geting_datatype_information">Problem geting datatype information</string>
@@ -719,7 +722,73 @@
     <string name="option_widget_timestamp_date">Display timestamp as date</string>
     <string name="option_widget_timestamp_title">Timestamp display</string>
     <string name="missing_maps_applications">Please install a maps application</string>
-    <string name="command_sent">Command sent to rest:</string>
-    <string name="toast_crash">Domodroid crash report notification</string>
-    <string name="OPTION_server_qrcode">Auto config server with qrcode</string>
+    <string name="input_voltage_returns_ok">Input voltage returns ok</string>
+    <string name="ups_temperature_returns_ok">UPS temperature returns ok</string>
+    <string name="ups_output_overload">UPS output overload</string>
+    <string name="ups_communication_restored">UPS communication restored</string>
+    <string name="battery_test_passed">Battery test passed</string>
+    <string name="ups_output_voltage_returns_ok">UPS Output voltage returns ok</string>
+    <string name="battery_is_low">Battery is low</string>
+    <string name="host_lost_ups_communication">Host lost UPS communication</string>
+    <string name="ups_output_returns_ok">UPS output returns ok</string>
+    <string name="battery_is_fully_charged">Battery is fully charged</string>
+    <string name="ups_output_voltage_too_high">UPS Output voltage too high</string>
+    <string name="battery_test_failed">Battery test failed</string>
+    <string name="ups_temperature_too_high">UPS temperature too high</string>
+    <string name="input_frequency_out_of_range">Input frequency out of range</string>
+    <string name="input_frequency_returns_ok">Input frequency returns ok</string>
+    <string name="mains_power">Mains power</string>
+    <string name="input_voltage_too_low">Input voltage too low</string>
+    <string name="ups_output_voltage_too_low">UPS Output voltage too low</string>
+    <string name="battery_test_initiated">Battery test initiated</string>
+    <string name="input_voltage_too_high">Input voltage too high</string>
+    <string name="battery_power">Battery power</string>
+    <string name="auto">Auto</string>
+    <string name="comfort">Comfort</string>
+    <string name="standby">Standby</string>
+    <string name="economy">Economy</string>
+    <string name="building_protection">Building Protection</string>
+    <string name="comfort__1">Comfort -1</string>
+    <string name="comfort__2">Comfort -2</string>
+    <string name="off_unballasting">Off/Unballasting</string>
+    <string name="unknown">Unknown</string>
+    <string name="lower">Lower</string>
+    <string name="speed_1">Speed 1</string>
+    <string name="speed_2">Speed 2</string>
+    <string name="speed_3">Speed 3</string>
+    <string name="speed_4">Speed 4</string>
+    <string name="speed_5">Speed 5</string>
+    <string name="decrease">Decrease</string>
+    <string name="increase">Increase</string>
+    <string name="no_day">no day</string>
+    <string name="monday">Monday</string>
+    <string name="tuesday">Tuesday</string>
+    <string name="wednesday">Wednesday</string>
+    <string name="thursday">Thursday</string>
+    <string name="friday">Friday</string>
+    <string name="saturday">Saturday</string>
+    <string name="sunday">Sunday</string>
+    <string name="heat">Heat</string>
+    <string name="cool">Cool</string>
+    <string name="fan_only">Fan only</string>
+    <string name="dry">Dry</string>
+    <string name="blue">Blue</string>
+    <string name="brown">Brown</string>
+    <string name="green">Green</string>
+    <string name="orange">Orange</string>
+    <string name="black">Black</string>
+    <string name="red">Red</string>
+    <string name="white">White</string>
+    <string name="yellow">Yellow</string>
+    <string name="day">Day</string>
+    <string name="disable">Disable</string>
+    <string name="enable">Enable</string>
+    <string name="mains">Mains</string>
+    <string name="month">Month</string>
+    <string name="up">Up</string>
+    <string name="down">Down</string>
+    <string name="triggered">Triggered</string>
+    <string name="False">False</string>
+    <string name="True">True</string>
+    <string name="year">Year</string>
 </resources>
